--- a/assets/scss/layouts/_banner.scss
+++ b/assets/scss/layouts/_banner.scss
@@ -7,6 +7,12 @@
 		height: 100vh;
 		align-items: center;
 		justify-content: center;
+
+		@include max(991px) {
+			height: auto;
+			padding: 120px 0px;
+			padding-top: 240px;
+		}
 	}
 
 	.swiper {
