--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -259,6 +259,10 @@
 			&-content {
 				padding: 30px 0px;
 				overflow: visible;
+
+				@include max(991px) {
+					padding: 12px 0px;
+				}
 			}
 
 			&-menu {
